# 32bit-cpu-Emulator

./: .gitignore  CMakeLists.txt  README.md
include/: types.hpp
include/cpu/: cpu.hpp  csr.hpp  memory.hpp  pipeline.hpp  predictor.hpp
include/debug/: dump.hpp
include/decoder/: decoder.hpp  encoding.hpp
include/encoder/: encoder.hpp
include/isa/: cond.hpp  format.hpp  mode.hpp  opcode.hpp
src/: assembler.cpp  cpu.cpp  decoder.cpp  dump.cpp  encoder.cpp  memory.cpp  pipeline.cpp  predictor.cpp
